@@ -9,6 +9,37 @@
 
 #include "debug.h"
 
+int headerVerifyInfo(int il, int dl, const void * pev, void * iv, int negate)
+{
+/*@-castexpose@*/
+    entryInfo pe = (entryInfo) pev;
+/*@=castexpose@*/
+    entryInfo info = iv;
+    int i;
+
+/*@-boundsread@*/
+    for (i = 0; i < il; i++) {
+	info->tag = ntohl(pe[i].tag);
+	info->type = ntohl(pe[i].type);
+	info->offset = ntohl(pe[i].offset);
+	if (negate)
+	    info->offset = -info->offset;
+	info->count = ntohl(pe[i].count);
+
+	if (hdrchkType(info->type))
+	    return i;
+	if (hdrchkAlign(info->type, info->offset))
+	    return i;
+	if (!negate && hdrchkRange(dl, info->offset))
+	    return i;
+	if (hdrchkData(info->count))
+	    return i;
+
+    }
+/*@=boundsread@*/
+    return -1;
+}
+
 /*@-boundswrite@*/
 char ** headerGetLangs(Header h)
 {
